force-app/main/default/objects/User/fields/Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Avatar_URL__c</fullName>
    <description>This URL should be for an image and the image is shown in a lecture booking screenflow.</description>
    <label>Avatar URL</label>
    <type>Url</type>
</CustomField>