force-app/main/default/objects/User/fields/Calendly_Lecture_Booking__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Lecture_Booking__c</fullName>
    <inlineHelpText>This is the URL for this Lecturer to have a lecture booked for them. Resverations use a different link.</inlineHelpText>
    <label>Calendly Lecture Booking</label>
    <type>Url</type>
</CustomField>