force-app/main/default/objects/User/fields/Calendly_Lecture_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Lecture_Reservation__c</fullName>
    <inlineHelpText>This link is used when resvering a time slot in the lecturers calendar. Actual bookings use a different link.</inlineHelpText>
    <label>Calendly Lecture Reservation</label>
    <type>Url</type>
</CustomField>