force-app/main/default/objects/User/fields/GetAccept__Token_GetAccept__c.field-meta.xml
<CustomField>
    <fullName>GetAccept__Token_GetAccept__c</fullName>
    <label>Token GetAccept</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>