force-app/main/default/objects/User/fields/Is_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Advisor</label>
    <type>Checkbox</type>
</CustomField>