force-app/main/default/objects/User/fields/Is_Time_Sheet_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Time_Sheet_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Time Sheet User</label>
    <type>Checkbox</type>
</CustomField>