force-app/main/default/objects/User/fields/IsLecturer__c.field-meta.xml
<CustomField>
    <fullName>IsLecturer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lecturer</label>
    <type>Checkbox</type>
</CustomField>