force-app/main/default/objects/User/fields/isMeetingBooker__c.field-meta.xml
<CustomField>
    <fullName>isMeetingBooker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Meeting Booker</label>
    <type>Checkbox</type>
</CustomField>