force-app/main/default/objects/User/fields/Personal_Calendly_Slug__c.field-meta.xml
<CustomField>
    <fullName>Personal_Calendly_Slug__c</fullName>
    <formula>MID(Calendly__CalendlyLink__c, FIND(&quot;calendly.com/&quot;, Calendly__CalendlyLink__c) + LEN(&quot;calendly.com/&quot;), FIND(&quot;/&quot;, Calendly__CalendlyLink__c, FIND(&quot;calendly.com/&quot;, Calendly__CalendlyLink__c) + LEN(&quot;calendly.com/&quot;)) - FIND(&quot;calendly.com/&quot;, Calendly__CalendlyLink__c) - LEN(&quot;calendly.com/&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Calendly Slug</label>
    <type>Text</type>
</CustomField>