force-app/main/default/objects/User/fields/Relatel_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Relatel_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Relatel User ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>