force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>This field shows which team a user is a part of. E.g. Danish employees in Denmark are marked as &quot;DK&quot;, Swedes in Sweden as &quot;SE&quot;, Danes in the Spanish office as ES - DK and Swedes in the Spanish office as ES - SE.
Users who are part of multiple offices (e.g. IT or management, should be marked as &quot;N/A&quot;</inlineHelpText>
    <label>Team</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>ES - DK</fullName>
            </value>
            <value>
                <fullName>ES - SE</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>