force-app/main/default/objects/User/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>