force-app/main/default/objects/User/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <defaultValue>&quot;External&quot;</defaultValue>
    <label>User Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Roles</valueSetName>
    </valueSet>
</CustomField>