force-app/main/default/objects/User/fields/Work_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours_Per_Day__c</fullName>
    <defaultValue>7.5</defaultValue>
    <label>Work Hours Per Day</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>