force-app/main/default/objects/User/listViews/Danish_Lecturers.listView-meta.xml
<ListView>
    <fullName>Danish_Lecturers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Calendly__CalendlyLink__c</columns>
    <columns>Calendly_Lecture_Booking__c</columns>
    <columns>Calendly_Lecture_Reservation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsLecturer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>DFJ_DK,Testamente_DK</value>
    </filters>
    <label>Danish Lecturers</label>
</ListView>