force-app/main/default/objects/User/listViews/Swedish_Lecturers.listView-meta.xml
<ListView>
    <fullName>Swedish_Lecturers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Calendly__CalendlyLink__c</columns>
    <columns>Calendly_Lecture_Booking__c</columns>
    <columns>Calendly_Lecture_Reservation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsLecturer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Market_Unit__c</field>
        <operation>equals</operation>
        <value>Testamente_SV,FA_SE</value>
    </filters>
    <label>Swedish Lecturers</label>
</ListView>