force-app/main/default/objects/User/listViews/Swedish_Users.listView-meta.xml
<ListView>
    <fullName>Swedish_Users</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Team__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>SE</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>ES - SE</value>
    </filters>
    <label>Swedish Users</label>
    <language>en_US</language>
</ListView>